[gd_scene load_steps=12 format=4 uid="uid://dwannankyldc8"]

[ext_resource type="Script" uid="uid://c4ube1iuvmivt" path="res://levels/level_base.gd" id="1_r02ql"]
[ext_resource type="TileSet" uid="uid://2355nqo8mm42" path="res://main_stage/main_tileset.tres" id="2_0ae44"]
[ext_resource type="PackedScene" uid="uid://c483kltkl1meb" path="res://player/FollowingCamera.tscn" id="3_b5t2l"]
[ext_resource type="PackedScene" uid="uid://2gl0denbhq43" path="res://inventory.tscn" id="4_lgw18"]
[ext_resource type="Script" uid="uid://b8eyf2rx3ggpb" path="res://levels/level_base_tool.gd" id="5_ylhod"]
[ext_resource type="PackedScene" uid="uid://cpwjhx66rd4l6" path="res://player/player.tscn" id="6_5qe4g"]
[ext_resource type="PackedScene" uid="uid://bkbhd33x46nf8" path="res://world_objects/goal.tscn" id="7_0ae44"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ts4ud"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jd1fy"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_cnvg6"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_p3adb"]

[node name="LevelTutorialObstacles" type="Node2D"]
texture_filter = 1
script = ExtResource("1_r02ql")

[node name="Ground" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAACAAgAAAAAAAEAAAACAAcAAAAAAAEAAAABAAcAAAABAAIAAAABAAYAAAABAAIAAAABAAUAAAABAAIAAAACAAUAAAAAAAEAAAACAAQAAAAAAAEAAAADAAQAAAABAAIAAAAEAAQAAAABAAIAAAAFAAQAAAABAAIAAAAGAAQAAAAAAAEAAAAGAAYAAAABAAIAAAAGAAgAAAAAAAEAAAAFAAgAAAABAAIAAAAEAAgAAAABAAIAAAAEAAkAAAAAAAEAAAADAAkAAAAAAAEAAAABAAgAAAABAAIAAAACAAYAAAAAAAEAAAADAAUAAAABAAIAAAAEAAUAAAABAAIAAAAFAAUAAAABAAIAAAAFAAYAAAABAAIAAAAFAAcAAAABAAIAAAAEAAcAAAABAAIAAAAEAAYAAAABAAIAAAADAAcAAAABAAIAAAADAAYAAAABAAIAAAAGAAMAAAAAAAEAAAAFAAMAAAAAAAEAAAAEAAMAAAAAAAEAAAADAAMAAAAAAAEAAAACAAMAAAAAAAEAAAAFAAkAAAAAAAEAAAAGAAkAAAAAAAEAAAACAAkAAAAAAAEAAAADAAgAAAABAAIAAAAGAAcAAAAAAAEAAAAGAAUAAAABAAIAAAABAAQAAAABAAIAAAABAAMAAAABAAIAAAABAAIAAAABAAIAAAACAAIAAAABAAIAAAADAAIAAAABAAIAAAAEAAIAAAABAAIAAAAFAAIAAAABAAIAAAAGAAIAAAABAAIAAAAGAAAAAAABAAIAAAAFAAAAAAABAAIAAAAFAAEAAAABAAIAAAAEAAEAAAABAAIAAAADAAEAAAABAAIAAAACAAEAAAABAAIAAAABAAEAAAACAAMAAAABAAAAAAACAAMAAAACAAAAAAACAAMAAAADAAAAAAACAAMAAAAEAAAAAAACAAMAAAAAAAAAAAACAAMAAAAAAAIAAAACAAMAAAAAAAEAAAACAAMAAAAGAAEAAAABAAIAAAAAAAMAAAACAAMAAAAAAAQAAAACAAMAAAAAAAUAAAACAAMAAAAAAAYAAAABAAIAAAAAAAcAAAABAAIAAAAAAAgAAAABAAIAAAAAAAkAAAACAAMAAAAAAAoAAAACAAMAAAAAAAsAAAACAAMAAAAAAAwAAAACAAMAAAAAAA0AAAACAAMAAAABAA0AAAACAAMAAAACAA0AAAACAAMAAAADAA0AAAACAAMAAAAEAA0AAAACAAMAAAAFAA0AAAABAAIAAAAGAA0AAAABAAIAAAAGAAwAAAABAAIAAAAGAAsAAAABAAIAAAAFAAsAAAABAAIAAAAEAAsAAAABAAIAAAAEAAwAAAABAAIAAAADAAwAAAABAAIAAAACAAwAAAACAAMAAAABAAwAAAACAAMAAAABAAoAAAABAAIAAAABAAkAAAABAAIAAAABAAsAAAABAAIAAAACAAsAAAABAAIAAAADAAsAAAABAAIAAAACAAoAAAABAAIAAAADAAoAAAABAAIAAAAEAAoAAAABAAIAAAAFAAoAAAABAAIAAAAGAAoAAAABAAIAAAAFAAwAAAABAAIAAAAJAAAAAAAHAAIAAAAKAAAAAAAIAAEAAAAKAAEAAAAHAAIAAAALAAEAAAAIAAEAAAALAAIAAAAHAAEAAAALAAMAAAAHAAEAAAAMAAMAAAAIAAEAAAAMAAQAAAAIAAEAAAANAAQAAAAIAAEAAAANAAUAAAAIAAEAAAAOAAUAAAAJAAIAAAAPAAUAAAABAAIAAAAPAAQAAAAJAAIAAAAPAAMAAAAIAAEAAAAQAAMAAAAIAAIAAAAQAAIAAAAIAAEAAAARAAIAAAAIAAEAAAARAAEAAAAIAAEAAAARAAAAAAAIAAEAAAASAAAAAAAIAAEAAAATAAAAAAAJAAIAAAAJAA4AAAAAAAEAAAAJAA0AAAAHAAAAAAAKAA0AAAAIAAEAAAAKAAwAAAAHAAAAAAALAAwAAAAIAAEAAAALAAsAAAAHAAAAAAAMAAsAAAAIAAEAAAAMAAoAAAAHAAAAAAANAAoAAAAIAAAAAAAOAAoAAAAIAAAAAAAOAAkAAAABAAIAAAAPAAkAAAAHAAAAAAAQAAkAAAAIAAEAAAAQAAgAAAAHAAEAAAARAAgAAAAIAAEAAAARAAkAAAAIAAEAAAASAAkAAAAIAAEAAAASAAgAAAAJAAAAAAATAAkAAAAJAAAAAAATAAoAAAAJAAEAAAATAAsAAAAIAAEAAAATAAwAAAAIAAEAAAATAA0AAAAIAAEAAAAUAA0AAAAJAAEAAAAUAA4AAAAAAAEAAAAOAAYAAAABAAIAAAANAAYAAAAJAAEAAAANAAcAAAAJAAIAAAAMAAcAAAAHAAIAAAAMAAYAAAAHAAEAAAAMAAUAAAAHAAEAAAALAAQAAAAHAAIAAAAQAAcAAAAHAAAAAAARAAcAAAAJAAAAAAARAAoAAAAIAAEAAAARAAsAAAAIAAEAAAARAAMAAAAIAAEAAAARAAQAAAAHAAIAAAASAAQAAAAIAAIAAAAUAAYAAAAHAAIAAAAUAAUAAAAIAAEAAAAUAAQAAAAIAAEAAAATAAQAAAAIAAEAAAATAAMAAAAIAAAAAAASAAIAAAAJAAEAAAASAAEAAAAJAAEAAAAQAAEAAAAIAAEAAAAPAAEAAAAIAAEAAAAOAAEAAAAIAAEAAAANAAEAAAAIAAEAAAAMAAEAAAAIAAEAAAALAAAAAAAIAAEAAAAMAAAAAAAIAAEAAAANAAAAAAAIAAEAAAAOAAAAAAAIAAEAAAAPAAAAAAAIAAEAAAAQAAAAAAAIAAEAAAAPAAIAAAAIAAEAAAAOAAIAAAAIAAEAAAANAAIAAAAIAAEAAAAMAAIAAAAIAAEAAAAOAAMAAAAIAAEAAAANAAMAAAAIAAEAAAAOAAQAAAAIAAEAAAAKAA4AAAAAAAEAAAALAA0AAAAIAAEAAAAMAA0AAAAIAAEAAAANAA0AAAAIAAEAAAAOAA0AAAAIAAEAAAAPAA0AAAAIAAEAAAAQAA0AAAAIAAEAAAARAA0AAAAIAAEAAAASAA0AAAAIAAEAAAAQAA4AAAAAAAEAAAAPAA4AAAAAAAEAAAAOAA4AAAAAAAEAAAANAA4AAAAAAAEAAAAMAA4AAAAAAAEAAAALAA4AAAAAAAEAAAATAA4AAAAAAAEAAAASAA4AAAAAAAEAAAARAA4AAAAAAAEAAAAJAP//AAAAAAEAAAAKAP//AAAAAAEAAAALAP//AAAAAAEAAAAMAP//AAAAAAEAAAANAP//AAAAAAEAAAAOAP//AAAAAAEAAAAPAP//AAAAAAEAAAAQAP//AAAAAAEAAAARAP//AAAAAAEAAAASAP//AAAAAAEAAAATAP//AAAAAAEAAAAMAAwAAAAIAAEAAAANAAsAAAAIAAEAAAAOAAsAAAAIAAEAAAAPAAsAAAAIAAEAAAAPAAoAAAAIAAEAAAANAAwAAAAIAAEAAAAOAAwAAAAIAAEAAAAQAAoAAAAIAAEAAAAQAAsAAAAIAAEAAAAPAAwAAAAIAAEAAAAQAAwAAAAIAAEAAAASAAoAAAAIAAEAAAASAAsAAAAIAAEAAAASAAwAAAAIAAEAAAARAAwAAAAIAAEAAAAUAAsAAAAJAAAAAAAUAAwAAAAJAAEAAAAUAP//AAAAAAEAAAAVAP//AAAAAAEAAAAWAP//AAAAAAEAAAAXAP//AAAAAAEAAAAYAP//AAAAAAEAAAAZAP//AAAAAAEAAAAZAAAAAAACAAMAAAAZAAEAAAACAAMAAAAZAAIAAAABAAIAAAAZAAMAAAABAAIAAAAZAAQAAAABAAIAAAAZAAUAAAADAAIAAAAZAAYAAAADAAIAAAAZAAcAAAADAAIAAAAZAAgAAAADAAIAAAAZAAkAAAADAAIAAAAZAAoAAAADAAIAAAAZAAsAAAAFAAAAAAAZAAwAAAAFAAAAAAAZAA0AAAAFAAAAAAAIAA4AAAAAAAEAAAD//w4AAAAAAAEAAAD//w0AAAAAAAEAAAD//wwAAAAAAAEAAAD//wsAAAAAAAEAAAD//woAAAAAAAEAAAD//wkAAAAAAAEAAAD//wgAAAAAAAEAAAD//wcAAAAAAAEAAAD//wYAAAAAAAEAAAD//wUAAAAAAAEAAAD//wQAAAAAAAEAAAD//wMAAAAAAAEAAAD//wIAAAAAAAEAAAD//wEAAAAAAAEAAAD//wAAAAAAAAEAAAD/////AAAAAAEAAAAAAP//AAAAAAEAAAABAP//AAAAAAEAAAACAP//AAAAAAEAAAADAP//AAAAAAEAAAAEAP//AAAAAAEAAAAFAP//AAAAAAEAAAAGAP//AAAAAAEAAAAHAP//AAAAAAEAAAAIAP//AAAAAAEAAAAKAAkAAAABAAIAAAAKAAgAAAABAAIAAAAKAAcAAAABAAIAAAAKAAYAAAABAAIAAAAKAAUAAAABAAIAAAAKAAQAAAABAAIAAAAKAAMAAAABAAIAAAAKAAIAAAABAAIAAAAJAAIAAAABAAIAAAAJAAEAAAABAAIAAAAIAAEAAAABAAIAAAAIAAAAAAABAAIAAAAHAAAAAAABAAIAAAAHAAEAAAABAAIAAAAHAAIAAAABAAIAAAAHAAMAAAABAAIAAAAHAAQAAAABAAIAAAAHAAUAAAABAAIAAAAHAAYAAAABAAIAAAAHAAcAAAABAAIAAAAHAAgAAAABAAIAAAAHAAkAAAABAAIAAAAHAAoAAAABAAIAAAAHAAsAAAABAAIAAAAHAAwAAAABAAIAAAAHAA0AAAABAAIAAAAIAA0AAAABAAIAAAAIAAwAAAABAAIAAAAIAAsAAAABAAIAAAAIAAoAAAABAAIAAAAIAAkAAAABAAIAAAAIAAgAAAABAAIAAAAIAAcAAAABAAIAAAAIAAYAAAABAAIAAAAIAAUAAAABAAIAAAAIAAQAAAABAAIAAAAIAAMAAAABAAIAAAAIAAIAAAABAAIAAAAJAAMAAAABAAIAAAAJAAQAAAABAAIAAAAJAAUAAAABAAIAAAAJAAYAAAABAAIAAAAJAAcAAAABAAIAAAAJAAgAAAABAAIAAAAJAAkAAAABAAIAAAAJAAoAAAABAAIAAAAJAAsAAAABAAIAAAAJAAwAAAABAAIAAAAKAAsAAAABAAIAAAAKAAoAAAABAAIAAAALAAoAAAABAAIAAAALAAkAAAABAAIAAAALAAgAAAABAAIAAAALAAcAAAABAAIAAAALAAYAAAABAAIAAAALAAUAAAABAAIAAAAMAAgAAAABAAIAAAAMAAkAAAABAAIAAAANAAkAAAABAAIAAAANAAgAAAABAAIAAAAOAAgAAAABAAIAAAAOAAcAAAABAAIAAAAPAAcAAAABAAIAAAAPAAYAAAABAAIAAAAQAAYAAAABAAIAAAAQAAUAAAABAAIAAAAQAAQAAAABAAIAAAARAAUAAAABAAIAAAARAAYAAAABAAIAAAASAAYAAAABAAIAAAASAAUAAAABAAIAAAASAAcAAAABAAIAAAAPAAgAAAABAAIAAAAVAAkAAAABAAIAAAAVAAgAAAABAAIAAAAVAAcAAAABAAIAAAAVAAYAAAAJAAIAAAAVAAUAAAAJAAEAAAAVAAQAAAAJAAAAAAAVAAMAAAABAAIAAAAVAAIAAAABAAIAAAAVAAEAAAABAAIAAAAVAAAAAAABAAIAAAAUAAAAAAABAAIAAAAUAAEAAAABAAIAAAATAAEAAAABAAIAAAATAAIAAAABAAIAAAAUAAIAAAABAAIAAAAUAAMAAAAJAAAAAAAWAAAAAAABAAIAAAAWAAEAAAABAAIAAAAWAAIAAAABAAIAAAAWAAMAAAABAAIAAAAWAAQAAAABAAIAAAAWAAUAAAABAAIAAAAWAAYAAAABAAIAAAAWAAcAAAABAAIAAAAWAAgAAAABAAIAAAAWAAkAAAABAAIAAAAWAAoAAAABAAIAAAAVAAoAAAABAAIAAAAUAAoAAAABAAIAAAAUAAkAAAABAAIAAAAUAAgAAAABAAIAAAATAAgAAAABAAIAAAAVAAsAAAABAAIAAAAVAAwAAAABAAIAAAAVAA0AAAABAAIAAAAWAA0AAAABAAIAAAAWAAwAAAABAAIAAAAWAAsAAAABAAIAAAAXAAsAAAABAAIAAAAXAAoAAAABAAIAAAAXAAkAAAABAAIAAAAXAAgAAAABAAIAAAAXAAcAAAABAAIAAAAXAAYAAAABAAIAAAAXAAUAAAABAAIAAAAXAAQAAAABAAIAAAAXAAMAAAABAAIAAAAXAAIAAAABAAIAAAAXAAEAAAABAAIAAAAXAAAAAAACAAMAAAAYAAAAAAACAAMAAAAYAAEAAAACAAMAAAAYAAIAAAABAAIAAAAYAAMAAAABAAIAAAAYAAQAAAABAAIAAAAYAAUAAAABAAIAAAAYAAYAAAADAAIAAAAYAAcAAAADAAIAAAAYAAgAAAADAAIAAAAYAAkAAAADAAIAAAAYAAoAAAADAAIAAAAYAAsAAAABAAIAAAAYAAwAAAABAAIAAAAXAAwAAAABAAIAAAAXAA0AAAABAAIAAAAYAA0AAAAFAAAAAAAUAAcAAAABAAIAAAATAAcAAAABAAIAAAATAAUAAAAHAAIAAAATAAYAAAABAAIAAAASAAMAAAAIAAEAAAAaAAsAAAAFAAAAAAAaAAoAAAADAAIAAAAbAAoAAAADAAIAAAAbAAkAAAADAAIAAAAbAAgAAAADAAIAAAAbAAcAAAADAAIAAAAbAAYAAAADAAIAAAAbAAUAAAADAAIAAAAaAAUAAAADAAIAAAAaAAYAAAADAAIAAAAaAAkAAAADAAIAAAAaAAgAAAADAAIAAAAaAAcAAAADAAIAAAAeAA0AAAABAAIAAAAdAA0AAAABAAIAAAAcAA0AAAABAAIAAAAbAA0AAAABAAIAAAAaAA0AAAABAAIAAAAaAAwAAAAFAAAAAAAbAAwAAAABAAIAAAAcAAwAAAABAAIAAAAdAAwAAAABAAIAAAAdAAsAAAABAAIAAAAcAAsAAAABAAIAAAAbAAsAAAABAAIAAAAdAAoAAAABAAIAAAAdAAkAAAABAAIAAAAcAAkAAAABAAIAAAAcAAgAAAABAAIAAAAcAAcAAAABAAIAAAAcAAoAAAABAAIAAAAdAAgAAAABAAIAAAAdAAcAAAABAAIAAAAdAAYAAAABAAIAAAAdAAUAAAABAAIAAAAdAAQAAAABAAIAAAAcAAUAAAABAAIAAAAcAAQAAAABAAIAAAAcAAYAAAABAAIAAAAbAAQAAAABAAIAAAAbAAMAAAABAAIAAAAbAAIAAAABAAIAAAAbAAEAAAABAAIAAAAaAAEAAAABAAIAAAAaAAAAAAABAAIAAAAaAAIAAAABAAIAAAAbAAAAAAABAAIAAAAaAAMAAAABAAIAAAAaAAQAAAABAAIAAAAcAAEAAAABAAIAAAAcAAAAAAABAAIAAAAdAAAAAAABAAIAAAAdAAEAAAABAAIAAAAdAAIAAAABAAIAAAAdAAMAAAABAAIAAAAcAAMAAAABAAIAAAAcAAIAAAABAAIAAAAeAAEAAAABAAIAAAAaAP//AAAAAAEAAAAbAP//AAAAAAEAAAAcAP//AAAAAAEAAAAdAP//AAAAAAEAAAAeAP//AAAAAAEAAAAfAP//AAAAAAEAAAAfAAAAAAABAAIAAAAfAAEAAAABAAIAAAAeAAIAAAABAAIAAAAeAAAAAAABAAIAAAAfAAIAAAABAAIAAAAfAAMAAAABAAIAAAAfAAQAAAABAAIAAAAfAAUAAAABAAIAAAAfAAYAAAABAAIAAAAfAAcAAAABAAIAAAAfAAgAAAABAAIAAAAfAAkAAAABAAIAAAAfAAoAAAABAAIAAAAfAAsAAAABAAIAAAAfAAwAAAABAAIAAAAfAA0AAAABAAIAAAAeAAwAAAABAAIAAAAeAAsAAAABAAIAAAAeAAoAAAABAAIAAAAeAAkAAAABAAIAAAAeAAgAAAABAAIAAAAeAAcAAAABAAIAAAAeAAYAAAABAAIAAAAeAAUAAAABAAIAAAAeAAQAAAABAAIAAAAeAAMAAAABAAIAAAAhAA4AAAAAAAEAAAAhAA0AAAAAAAEAAAAhAAwAAAAAAAEAAAAhAAsAAAAAAAEAAAAhAAoAAAAAAAEAAAAhAAkAAAAAAAEAAAAhAAgAAAAAAAEAAAAhAAcAAAAAAAEAAAAhAAYAAAAAAAEAAAAhAAUAAAAAAAEAAAAhAAQAAAAAAAEAAAAhAAMAAAAAAAEAAAAhAAIAAAAAAAEAAAAhAAEAAAAAAAEAAAAhAAAAAAAAAAEAAAAhAP//AAAAAAEAAAAgAP//AAAAAAEAAAAgAAAAAAABAAIAAAAgAAEAAAABAAIAAAAgAAIAAAABAAIAAAAgAAMAAAABAAIAAAAgAAQAAAABAAIAAAAgAAUAAAABAAIAAAAgAAYAAAABAAIAAAAgAAcAAAABAAIAAAAgAAgAAAABAAIAAAAgAAkAAAABAAIAAAAgAAoAAAABAAIAAAAgAAsAAAABAAIAAAAgAAwAAAABAAIAAAAgAA0AAAABAAIAAAAAAA4AAAAAAAEAAAABAA4AAAAAAAEAAAACAA4AAAAAAAEAAAADAA4AAAAAAAEAAAAEAA4AAAAAAAEAAAAFAA4AAAAAAAEAAAAGAA4AAAAAAAEAAAAHAA4AAAAAAAEAAAAVAA4AAAAAAAEAAAAWAA4AAAAAAAEAAAAXAA4AAAAAAAEAAAAYAA4AAAAAAAEAAAAZAA4AAAAAAAEAAAAaAA4AAAAAAAEAAAAbAA4AAAAAAAEAAAAcAA4AAAAAAAEAAAAdAA4AAAAAAAEAAAAeAA4AAAAAAAEAAAAfAA4AAAAAAAEAAAAgAA4AAAAAAAEAAAAiAA4AAAAAAAEAAAA=")
tile_set = ExtResource("2_0ae44")

[node name="TreesAndStuff" type="TileMapLayer" parent="."]
texture_filter = 1
tile_set = ExtResource("2_0ae44")

[node name="FollowingCamera" parent="." node_paths=PackedStringArray("target", "bounds_object") instance=ExtResource("3_b5t2l")]
position = Vector2(398, 224)
target = NodePath("../WorldPlacedObjects/Player")
bounds_object = NodePath("../CameraBounds")

[node name="CameraBounds" type="Node2D" parent="."]

[node name="LeftBound" type="StaticBody2D" parent="CameraBounds"]
rotation = 1.5707964
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBounds/LeftBound"]
shape = SubResource("WorldBoundaryShape2D_ts4ud")

[node name="RightBound" type="StaticBody2D" parent="CameraBounds"]
position = Vector2(1056, 0)
rotation = 4.712389
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBounds/RightBound"]
shape = SubResource("WorldBoundaryShape2D_jd1fy")

[node name="DownBound" type="StaticBody2D" parent="CameraBounds"]
position = Vector2(0, 449)
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBounds/DownBound"]
shape = SubResource("WorldBoundaryShape2D_cnvg6")

[node name="UpBound" type="StaticBody2D" parent="CameraBounds"]
position = Vector2(0, -1)
rotation = 3.1415927
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBounds/UpBound"]
shape = SubResource("WorldBoundaryShape2D_p3adb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("4_lgw18")]

[node name="LevelCompleteOverlay" type="PanelContainer" parent="CanvasLayer"]
visible = false
z_index = 300
offset_right = 796.0
offset_bottom = 448.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/LevelCompleteOverlay"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LevelCompleteOverlay/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/LevelCompleteOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL COMPLETE!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/LevelCompleteOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Level Selection (ESC)"

[node name="WorldPlacedObjects" type="Node2D" parent="."]
z_index = 10
script = ExtResource("5_ylhod")

[node name="PlayerSpawnPoint" type="Marker2D" parent="WorldPlacedObjects"]
position = Vector2(144, 208)

[node name="Player" parent="WorldPlacedObjects" node_paths=PackedStringArray("tilemap") instance=ExtResource("6_5qe4g")]
position = Vector2(144, 208)
tilemap = NodePath("../../Ground")

[node name="Goal" parent="WorldPlacedObjects" instance=ExtResource("7_0ae44")]
position = Vector2(944, 400)

[connection signal="pressed" from="CanvasLayer/LevelCompleteOverlay/CenterContainer/VBoxContainer/Button" to="." method="exit_to_level_selector"]
[connection signal="completed" from="WorldPlacedObjects/Goal" to="." method="_on_goal_completed"]
